feat: :sparkles: Add Certifications section and update layout in About and WorkExperience components

--- a/content/about.yml
+++ b/content/about.yml
@@ -13,7 +13,7 @@ content: |
 
   ### What Drives Me
 
-  I love taking complex problems from performance issues to cross-system integrations and breaking them into simple, maintainable solutions. Seeing a feature go from idea to production, knowing it's stable, scalable, and genuinely useful, is what keeps me motivated.
+  I love taking complex problems, from performance issues to cross-system integrations, and breaking them into simple, maintainable solutions. Seeing a feature go from idea to production, knowing it's stable, scalable, and genuinely useful, is what keeps me motivated.
 
   Continuous learning is a big part of who I am. Whether it's mastering new backend patterns, improving CI/CD pipelines, or exploring better ways to serve customers through automation and tooling, I'm always looking for the next challenge that helps me grow.
 
@@ -21,7 +21,7 @@ content: |
 
   Outside of engineering, I'm a dad, a maker, and someone who's always tinkering, whether it's 3D printing, improving my home server setup, or experimenting with side projects like a minimalistic CRM for solopreneurs or AI-powered assistants for small businesses.
 
-  Thanks for visiting. Feel free to explore my [projects](/projects) or [reach out](/#contact) if you'd like to collaborate or talk shop.
+  Thanks for visiting.
 
 images:
   - src: https://images.unsplash.com/photo-1744877478622-a78c7a3336f6?q=80&w=1587&auto=format&fit=crop
