feat: Changed info to Sahudys'

--- a/content/about.yml
+++ b/content/about.yml
@@ -1,30 +1,24 @@
 title: About Me
-description: Learn more about my journey as a Senior Software Engineer, my approach to building reliable eCommerce and backend systems, and the mindset that drives my work.
+description: Discover my journey as an Industrial Engineer and Digital Project Manager, my approach to operational excellence, and the leadership mindset that drives my work.
 content: |
-  Hi, I'm **Carlos Alvarez**, a Senior Software Engineer based in Saint Johns, Florida. For more than a decade, I've worked across the full spectrum of web development, most recently focusing on Magento, PHP, and large-scale eCommerce architectures.
+  Hi, I'm **Sahudy Sharolyn Soriano**, an Industrial Engineer and Project Lead based in Saint Johns, Florida. For more than 10 years, I've led projects across manufacturing, logistics, operations, and financial consulting, always driven by a focus on efficiency, customer satisfaction, and measurable impact.
 
-  My career has taken me from embedded systems and internal tooling to leading major features and international expansions for enterprise-level Magento platforms. Most recently at **Material Bank**, I developed and shipped end-to-end features, architected custom modules, integrated ERPs and third-party APIs, and played a key role in launching the company's Japanese market implementation.
+  My career began in high-demand industrial environments, where I learned firsthand the power of Lean methodologies, smart process design, and data-driven decision making. Since then, I've guided companies through operational improvements, implemented Agile frameworks, managed financial workflows, and optimized supply chain processes. In every role, my focus has been the same: transform complexity into efficiency.
 
-  ### My Engineering Philosophy
+  ### My Leadership & Project Philosophy
 
-  I approach software with a mindset centered around **clarity, reliability, and continuous improvement**. Good engineering solves real problems, reduces friction, and scales without drama. Whether I'm building custom Magento modules, improving developer workflows, or integrating complex systems, my goal is always the same: create solutions that make life easier for both users and the teams who maintain them.
+  My approach is rooted in **clarity, continuous improvement, and empathy**. Real results come from well-structured processes, motivated teams, and a mindset of iteration rather than perfection. I apply Agile, Lean, Scrum, 5S, and JIT practices not as buzzwords, but as frameworks to reduce waste, increase productivity, and empower teams to perform at their best.
 
-  I value clean architecture, thoughtful communication, and processes that empower teams to move quickly without breaking things. I believe great engineering and good leadership come from empathy, curiosity, and the willingness to iterate.
+  Whether I'm re-engineering internal workflows, analyzing KPIs, or leading digital transformation initiatives, I put people at the center of the solution. Tools like SAP, Jira, and Business Intelligence platforms help scale results but it's communication, accountability, and ownership that sustain them.
 
   ### What Drives Me
 
-  I love taking complex problems, from performance issues to cross-system integrations, and breaking them into simple, maintainable solutions. Seeing a feature go from idea to production, knowing it's stable, scalable, and genuinely useful, is what keeps me motivated.
+  I'm energized by challenges where operations and strategy meet. Turning disorganized processes into well-run systems, elevating team performance, and helping businesses unlock profitability are the projects that inspire me most.
 
-  Continuous learning is a big part of who I am. Whether it's mastering new backend patterns, improving CI/CD pipelines, or exploring better ways to serve customers through automation and tooling, I'm always looking for the next challenge that helps me grow.
+  I believe growth comes from learning, and I continue to invest in myself, currently pursuing advanced studies in Business Intelligence and Digital Project Management to expand the impact I can create.
 
-  ### Beyond the Code
+  ### Beyond the Office
 
-  Outside of engineering, I'm a dad, a maker, and someone who's always tinkering, whether it's 3D printing, improving my home server setup, or experimenting with side projects like a minimalistic CRM for solopreneurs or AI-powered assistants for small businesses.
+  Outside of work, I'm a hands-on learner and a mentor at heart. I enjoy supporting individuals and small businesses through financial planning, organization, and process improvements. I also love meaningful connections, traveling, and exploring new places with my family.
 
-  Thanks for visiting.
-
-images:
-  - src: https://images.unsplash.com/photo-1744877478622-a78c7a3336f6?q=80&w=1587&auto=format&fit=crop
-    alt: Workspace
-  - src: https://images.unsplash.com/photo-1744429523595-2c06b8611242?q=80&w=1587&auto=format&fit=crop
-    alt: Travel moment
+  Thank you for stopping by. Feel free to explore my journey further or connect with me if you'd like to collaborate or discuss how we can build something exceptional together.
